# codal-nimble

./: .gitmodules  CMakeLists.txt
ext/tinycrypt/include/tinycrypt/: ccm_mode.h  ctr_mode.h  ctr_prng.h  ecc_dsa.h
ext/tinycrypt/src/: ctr_prng.c
inc/: assert.h
inc/console/: console.h
inc/nimble/: nimble_npl_os.h
inc/syscfg/: syscfg.h
nimble/controller/include/controller/: ble_fem.h  ble_ll_scan.h  ble_ll_sync.h  ble_ll_tmr.h  ble_phy.h
nimble/controller/src/: ble_ll_adv.c  ble_ll_dtm_priv.h  ble_ll_hci.c  ble_ll_priv.h  ble_ll_rand.c  ble_ll_sched.c  ble_ll_supp_cmd.c  ble_ll_trace.c  ble_ll_utils.c
nimble/host/include/host/: ble_gap.h  ble_gatt.h  ble_hs.h  ble_hs_log.h
nimble/host/services/bas/src/: ble_svc_bas.c
nimble/host/services/dis/src/: ble_svc_dis.c
nimble/host/services/gap/src/: ble_svc_gap.c
nimble/host/services/ipss/src/: ble_svc_ipss.c
nimble/host/services/lls/src/: ble_svc_lls.c
nimble/host/services/tps/src/: ble_svc_tps.c
nimble/host/src/: ble_att.c  ble_att_cmd_priv.h  ble_att_priv.h  ble_dtm.c  ble_eddystone.c  ble_gap_priv.h  ble_gattc.c  ble_gatts.c  ble_gatts_lcl.c  ble_hs.c  ble_hs_adv.c  ble_hs_cfg.c  ble_hs_conn.c  ble_hs_hci.c  ble_hs_hci_cmd.c  ble_hs_hci_evt.c  ble_hs_hci_priv.h  ble_hs_mbuf.c  ble_hs_periodic_sync.c  ble_hs_periodic_sync_priv.h  ble_hs_priv.h  ble_hs_pvcy.c  ble_hs_shutdown.c  ble_l2cap.c  ble_sm_cmd.c  ble_sm_priv.h  ble_store.c
nimble/include/nimble/: ble.h  hci_common.h  nimble_opt_auto.h
nimble/transport/nimble/: transport.h
nimble/transport/nimble/transport/: monitor.h
nimble/transport/socket/src/: ble_hci_socket.c
old/: assert.h
old/ext/tinycrypt/include/tinycrypt/: cbc_mode.h  ecc_dh.h  hmac_prng.h
old/ext/tinycrypt/src/: aes_encrypt.c  cbc_mode.c  ccm_mode.c  cmac_mode.c  ctr_mode.c  ecc.c  ecc_dh.c  ecc_dsa.c  hmac.c  hmac_prng.c
old/nimble/controller/include/controller/: ble_hw.h  ble_ll.h  ble_ll_adv.h  ble_ll_conn.h  ble_ll_hci.h  ble_ll_trace.h  ble_phy_trace.h
old/nimble/controller/src/: ble_ll.c  ble_ll_conn.c  ble_ll_conn_hci.c  ble_ll_conn_priv.h  ble_ll_ctrl.c  ble_ll_ctrl_priv.h  ble_ll_dtm.c  ble_ll_hci_ev.c  ble_ll_hci_vs.c  ble_ll_iso.c  ble_ll_resolv.c  ble_ll_rfmgmt.c  ble_ll_scan.c  ble_ll_scan_aux.c  ble_ll_sync.c  ble_ll_whitelist.c
old/nimble/host/include/host/: ble_att.h  ble_hs_id.h  ble_l2cap.h  ble_sm.h  ble_store.h
old/nimble/host/services/ans/src/: ble_svc_ans.c
old/nimble/host/services/bleuart/src/: bleuart.c
old/nimble/host/services/gatt/src/: ble_svc_gatt.c
old/nimble/host/services/ias/src/: ble_svc_ias.c
old/nimble/host/src/: ble_att_clt.c  ble_att_cmd.c  ble_att_svr.c  ble_gap.c  ble_gatt_priv.h  ble_hs_flow.c  ble_hs_hci_util.c  ble_hs_id.c  ble_hs_log.c  ble_hs_misc.c  ble_hs_startup.c  ble_hs_stop.c  ble_ibeacon.c  ble_l2cap_coc.c  ble_l2cap_coc_priv.h  ble_l2cap_priv.h  ble_l2cap_sig.c  ble_l2cap_sig_priv.h  ble_sm.c  ble_sm_alg.c  ble_sm_lgcy.c  ble_sm_sc.c  ble_store_util.c  ble_uuid.c
old/nimble/include/nimble/: nimble_npl.h
old/nimble/transport/src/: transport.c
old/porting/nimble/include/hal/: hal_timer.h
old/porting/nimble/include/log_common/: log_common.h
old/porting/nimble/include/nimble/: nimble_port.h
old/porting/nimble/include/os/: os.h  os_mbuf.h  os_mempool.h  os_trace_api.h
old/porting/nimble/src/: endian.c  mem.c  os_mbuf.c  os_mempool.c
old/porting/npl/inc/: nimble_npl_os.h
old/porting/npl/src/: npl_os_dummy.c
porting/nimble/include/logcfg/: logcfg.h
porting/nimble/include/modlog/: modlog.h
porting/nimble/include/os/: os_cputime.h
porting/nimble/src/: nimble_port.c  os_msys_init.c
porting/npl/inc/: nimble_npl_os.h
porting/npl/src/: npl_os_dummy.c
source/: test.c
source/npl/: npl_os_dummy.c
